# sugar_bot

./: README.md
sugar_bot_cpp_upload/: CMakeLists.txt  LICENSE  README.md  backtester.cpp  backtester.h  candle.h  csv.cpp  csv.h  indicator.h  indicators_composite.cpp  indicators_composite.h  indicators_ema.cpp  indicators_ema.h  indicators_roc.cpp  indicators_roc.h  indicators_rsi.cpp  indicators_rsi.h  indicators_sma.cpp  indicators_sma.h  main.cpp  metrics.h  series.cpp  series.h  strategy.h  strategy_diff_cross.cpp  strategy_diff_cross.h  strategy_roc_sma.cpp  strategy_roc_sma.h  sweep.cpp  sweep.h  swing_breakout_strategy.cpp  swing_breakout_strategy.h  utils.cpp  utils.h
